capsfeatures: Make sure that the static ANY/EMPTY capsfeatures are never mutable

See https://bugzilla.gnome.org/show_bug.cgi?id=723236